--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fullcalendar/core": "^4.3.1",
     "@fullcalendar/daygrid": "^4.3.0",
+    "acorn": "^7.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "browserify": "^16.5.0",
@@ -26,6 +27,7 @@
     "greenlock-express": "^4.0.3",
     "handsontable": "^7.4.2",
     "jquery": "^3.4.1",
+    "minimist": "^1.2.5",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "nocache": "^2.1.0",
